# freebox_hosts

./: .gitignore  README.md  pyproject.toml  setup_env.sh
openwrt/: freebox-hosts
src/freebox_hosts/: __main__.py
